<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_gradient_cobalt"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/parkingSettingsDescription"
            style="@style/textInfoDescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="60dp"
            android:text="@string/blue_lines_parking_settings_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/parkingSettingsDate"
            style="@style/parkingSettingsDayStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="none"
            android:maxLines="1"
            android:text="@string/parking_settings_today_text"
            app:layout_constraintEnd_toStartOf="@+id/parkingSettingsUntil"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parkingSettingsDescription"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/parkingSettingsUntil"
            style="@style/parkingSettingsUntilStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/parking_settings_until"
            app:layout_constraintBottom_toBottomOf="@id/parkingSettingsDate"
            app:layout_constraintEnd_toStartOf="@+id/parkingSettingsTime"
            app:layout_constraintStart_toEndOf="@id/parkingSettingsDate"
            app:layout_constraintTop_toTopOf="@id/parkingSettingsDate" />

        <EditText
            android:id="@+id/parkingSettingsTime"
            style="@style/parkingSettingsDayStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="none"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/parkingSettingsUntil"
            app:layout_constraintTop_toTopOf="@id/parkingSettingsDate"
            tools:ignore="LabelFor"
            tools:text="12:00" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clockHoursQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_circular_dandelion"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/parkingSettingsTime"
            app:layout_constraintStart_toEndOf="@id/parkingSettingsTime"
            app:srcCompat="@drawable/ic_question"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/parkingSettingsAmountText"
            style="@style/parkingSettingsUntilStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parkingSettingsTime"
            tools:text="@string/parking_settings_amount_text"
            tools:visibility="visible" />

        <View
            android:id="@+id/outerCircle"
            android:layout_width="204dp"
            android:layout_height="204dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/shape_circle_mid_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parkingSettingsTime" />

        <com.links.events.circular_swipe.view.widget.ExtendTouchView
            android:id="@+id/extendTouchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/outerCircle"
            app:layout_constraintEnd_toEndOf="@id/outerCircle"
            app:layout_constraintStart_toStartOf="@id/outerCircle"
            app:layout_constraintTop_toTopOf="@id/outerCircle" />

        <com.links.events.circular_swipe.view.widget.CrownSlider
            android:id="@+id/crownSlider"
            android:layout_width="184dp"
            android:layout_height="184dp"
            app:crown_image="@drawable/ic_crown_cobalt"
            app:crown_turn_factor="FULL_TURN_60"
            app:layout_constraintBottom_toBottomOf="@id/outerCircle"
            app:layout_constraintEnd_toEndOf="@id/outerCircle"
            app:layout_constraintStart_toStartOf="@id/outerCircle"
            app:layout_constraintTop_toTopOf="@id/outerCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/parkingCircularButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/outerCircle"
            app:layout_constraintEnd_toEndOf="@id/outerCircle"
            app:layout_constraintStart_toStartOf="@id/outerCircle"
            app:layout_constraintTop_toTopOf="@id/outerCircle"
            app:srcCompat="@drawable/shape_circle_primary_stroke" />

        <TextView
            android:id="@+id/parkingClockRunText"
            style="@style/refuelingLiftDispenserTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/blue_lines_parking_settings_clock_turn"
            app:layout_constraintBottom_toTopOf="@+id/parkingClockDescText"
            app:layout_constraintEnd_toEndOf="@id/parkingCircularButton"
            app:layout_constraintStart_toStartOf="@id/parkingCircularButton"
            app:layout_constraintTop_toTopOf="@id/parkingCircularButton"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/blue_lines_parking_settings_clock_start" />

        <TextView
            android:id="@+id/parkingClockDescText"
            style="@style/parkingSettingsClockDescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/blue_lines_parking_settings_clock_desc"
            app:layout_constraintBottom_toBottomOf="@id/parkingCircularButton"
            app:layout_constraintEnd_toEndOf="@id/parkingCircularButton"
            app:layout_constraintStart_toStartOf="@id/parkingCircularButton"
            app:layout_constraintTop_toBottomOf="@id/parkingClockRunText" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/hourTooltipArrowUp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/ic_triangle_goldenrod"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="@id/clockHoursQuestion"
            app:layout_constraintStart_toStartOf="@id/clockHoursQuestion"
            app:layout_constraintTop_toTopOf="@id/clockHoursQuestion" />

        <TextView
            android:id="@+id/hourTooltipText"
            style="@style/parkingSettingsTooltipStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/goldenrod"
            android:padding="12dp"
            android:text="@string/blue_lines_parking_ticket_tooltip"
            app:layout_constraintTop_toBottomOf="@id/hourTooltipArrowUp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/hoursTooltipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="hourTooltipArrowUp,hourTooltipText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>